--- a/components/like/index.wxss
+++ b/components/like/index.wxss
@@ -1,6 +1,9 @@
 /* components/like/index.wxss */
 .container {
-
+  display: inline-flex;
+  flex-direction: row;
+  padding: 10rpx;
+  width: 90rpx;
 }
 .container image{
   width: 32rpx;
@@ -9,6 +12,10 @@
 .container text {
   /* ios苹方 android思源 */
   font-family: "PingFangSC-Thin";/*ios苹方 */
-  font-size: 48rpx;
+  font-size: 24rpx;
+  line-height: 24rpx;
   color: #bbbbbb;
+  position: relative;
+  bottom: 10rpx;
+  left: 6rpx;
 }
