--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,3 +1,5 @@
 
 <!-- "v-like": "../../components/like/index" -->
-<v-like></v-like>  
+<v-epsoide index="{{classic.index}}"></v-epsoide>
+<v-like bind:like="onLike" like="{{classic.like_status}}" count="{{classic.fav_nums}}"></v-like>  
+<v-movie img="{{classic.image}}" content="{{classic.content}}"></v-movie>
