0930上拉加载的准备工作

--- a/components/tag/index.wxml
+++ b/components/tag/index.wxml
@@ -1,6 +1,8 @@
-<view class="container">
+<view bind:tap="onTap" class="container tag-class">
   <text>{{text}}</text>
   <slot name="after">
   </slot>
   <!-- //插槽 -->
 </view>
+
+<!-- 普通样式 外部样式 -->
