--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -1,3 +1,5 @@
+<wxs src="../../util/filter.wxs" module="util"></wxs>
+
 <view class="container">
   <view class='head'>
     <image src='{{book.image}}'></image>
@@ -6,12 +8,82 @@
   </view>
   <view class='sub-container'>
     <text class='headline'>短评</text>
+    <text class='shadow' wx:if="{{comments.length == 0}}">还没有短评</text>
     <view class='comment-container'>
-      <block wx:for="{{comments}}" wx:key="content">
-        <v-tag text="{{item.content}}">
+      <block wx:for="{{util.limit(comments,10)}}" wx:key="content">
+        <!-- <v-tag tag-class="{{index == 0 ? 'ex-tag1' : '' || index == 1 ? 'ex-tag2' : ''}}" text="{{item.content}}">
+          <text class='num' slot="after">{{'+' + item.nums}}</text>
+        </v-tag> -->
+        <v-tag tag-class="{{index == 0 ? 'ex-tag1' : index == 1 ? 'ex-tag2' : ''}}" text="{{item.content}}">
           <text class='num' slot="after">{{'+' + item.nums}}</text>
         </v-tag>
       </block>
     </view>
   </view>
+  <view class='sub-container'>
+    <text class='headline'>内容简介</text>
+    <text class='content' decode="{{true}}">{{util.format(book.summary)}}</text>
+  </view>
+  <view class='sub-container'>
+    <text class='headline'>书本信息</text>
+    <view class='detail-container'>
+      <view class='vertical description'>
+        <text>出版社</text>
+        <text>出版年</text>
+        <text>页数</text>
+        <text>定价</text>
+        <text>装帧</text>
+      </view>
+      <view class='vertical'>
+        <text>{{book.publisher}}</text>
+        <text>{{book.pubdate}}</text>
+        <text>{{book.pages}}</text>
+        <text>{{book.price}}</text>
+        <text>{{book.binding}}</text>
+      </view>
+    </view>
+  </view>
 </view>
+
+<!-- 底部栏 -->
+<view class='post-container' wx:if="{{!posting}}">
+  <view class='post-fake' bind:tap='onFakePost'>
+    <text>输入短评</text>
+  </view>
+  <view class='like-container'>
+    <v-like bind:like="onLike" class="like" like="{{likeStatus}}" count="{{likeCount}}" />
+  </view>
+</view>
+
+<view class='posting-container' wx:if="{{posting}}">
+  <view class='post-header'>
+    <text wx:if="{{comments.length > 0}}">仅可点击标签+1</text>
+    <text wx:else>暂无短评</text>
+    <text bind:tap='onCancel' class='cancel'>取消</text>
+  </view>
+  <view class='comment-container'>
+    <block wx:for="{{util.limit(comments,3)}}" wx:key="content">
+      <v-tag bind:tapping="onPost" tag-class="{{tool.highlight(index)}}" text="{{item.content}}">
+        <text class='num' slot="after">{{'+' + item.nums}}</text>
+      </v-tag>
+    </block>
+  </view>
+  <input bindconfirm="onPost" class='post' placeholder='短评最多12个字'></input>
+</view>
+
+<v-mask wx:if="{{posting}}" />
+
+<wxs module="tool">
+  var highlight = function(index) {
+    if(index == 0) {
+      return 'ex-tag1'
+    }
+    if(index ==1) {
+      return 'ex-tag2'
+    } 
+    return ''
+  }
+  module.exports = {
+    highlight: highlight
+  }
+</wxs> 
