--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -1,8 +1,8 @@
 
 
-<view class='container'>
+<view wx:if="{{!searching}}" class='container'>
   <view class='header'>
-    <view class='box'>
+    <view class='box' bind:tap='onSearching'>
       <image src='/images/icon/search.png'></image>
       <text>搜索书籍</text>
     </view>
@@ -17,3 +17,4 @@
   </view>
 </view>
 
+<v-search more="{{more}}" bind:cancel="onCancel" wx:if="{{searching}}" />
