--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -52,6 +52,9 @@
   </view>
   <view class='like-container'>
     <v-like bind:like="onLike" class="like" like="{{likeStatus}}" count="{{likeCount}}" />
+    <v-button class='share-btn' open-type='share'>
+        <image class='share' slot="img" src='/images/icon/share.png'></image>
+      </v-button>
   </view>
 </view>
 
