--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -2,7 +2,12 @@
 <view class='container'>
   <view class='header'>
     <v-episode class="episode" index="{{classic.index}}"></v-episode>
-    <v-like class="like" bind:like="onLike" like="{{likeStatus}}" count="{{likeCount}}"></v-like>
+    <view class='like-container'>
+      <v-like class="like" bind:like="onLike" like="{{likeStatus}}" count="{{likeCount}}"></v-like>
+      <v-button class='share-btn' open-type='share'>
+        <image class='share' slot="img" src='/images/icon/share.png'></image>
+      </v-button>
+    </view>
   </view>
   <v-movie hidden="{{classic.type!=100}}" img="{{classic.image}}" content="{{classic.content}}"></v-movie>
   <!-- <v-music src="{{classic.url}}" wx:if="{{classic.type!=200}}" hidden="{{classic.type!=200}}" img="{{classic.image}}" content="{{classic.content}}"></v-music> -->
