--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -28,3 +28,20 @@
   bottom: 40rpx;
   justify-content: space-between;
 }
+.like-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-right:30rpx;
+}
+.share-btn{
+  margin-top:28rpx;
+  margin-left:10rpx;
+}
+
+.share{
+  /* padding:10rpx; */
+  width:40rpx;
+  height:40rpx;
+}
